Revert "fixed some weird uneven lines"
This reverts commit 0c2938f1463e673a5842778d4be04c06151e0c64.

--- a/EXAM/css/style.css
+++ b/EXAM/css/style.css
@@ -52,11 +52,6 @@ h3 {
   margin-left: 1.5%
 }
 
-.projtwo h4 {
-  margin-left: 1.5%
-
-}
-
 h4 {
   font-family:'Avenir', sans-serif;
   font-weight: normal;
@@ -66,7 +61,9 @@ h4 {
   margin-top: -1%;
 }
 
-
+.projtwo h4 {
+  margin-left: 1.5%
+}
 
 ul {
 	margin:0;
@@ -326,7 +323,9 @@ footer {
     -moz-column-width: 33%;
     column-width: inherit;
 }
-
+/* .projtwo {
+  padding-bottom: 10px;
+} */
 
 /* .footer {
   position: absolute;
